# novatel_ediepy

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  README.md  pyproject.toml  tox.ini
doc/: conf.py  index.rst
examples/: ConvertOEM_CommandEncoder.py  ConvertOEM_Components.py  ConvertOEM_FileParser.py  ConvertOEM_Parser.py
examples/flat_binary/: edie_postprocess_bestpos.py  edie_receiver_bestpos.py
examples/json/: edie_postprocess_bestpos.py  edie_receiver_bestpos.py
novatel_edie/: common.py  generate_log_structures.py
novatel_edie/decoders/: common.py  jsonreader.py  logging.py  novatel.py
novatel_edie/interfaces/: common.py  file_stream.py
test/: test_novatel.py
